fix: alignemnt bug

--- a/style.css
+++ b/style.css
@@ -19,9 +19,9 @@
 }
 
 .wrapper{
-    width: 100%;
-    height: 100%;
-   
+    width: 100vw;
+    height: 100vh;
+   overflow: hidden;
 }
 .wrapper .siteHeader{
     line-height: 18px;
@@ -113,4 +113,15 @@ cursor: pointer;
     box-shadow: 0 0 4px rgba(185,173,153,0.5);
     border-color: #B9AD99;
     outline: none;
+}
+.grids{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin-top: 10px;
+}
+.grids .books{
+    width: 200px;
+    height: 150px;
+    margin: 10px;
+    background-color: #23a094;
 }
